foxban: fix blog align
git-svn-id: http://svn.kcn.cn/repos/kbs/trunk@10223 de4889a5-8ad4-4bf3-bd87-57997c21d515

--- a/www2/pc/default.css
+++ b/www2/pc/default.css
@@ -91,6 +91,7 @@ border-color:#000000;
 font-size:12px;
 color:#000000;
 text-decoration:none;
+text-align:left;
 }
 .tt2{
 font-size:14px;
@@ -392,5 +393,5 @@ ul {
 	margin: 0px 0px 0px 5px; padding: 0px;
 }
 li {
-	padding: 0px; margin-left: 10px;
+	padding: 0px; margin-left: 10px;text-align:left;
 }
